	  A malformed packet could cause an internal assertion failure.
	- added test for HINFO canonicalisation behaviour.
	- fixup reported problem with transparent local-zone data where
	  queries with different type could get nxdomain. Now queries
	  with a different name get resolved normally, with different type
	  get a correct NOERROR/NODATA answer.

5 January 2009: Wouter
	- fixup getaddrinfo failure handling for remote control port.
	- added L.ROOT-SERVERS.NET. AAAA 2001:500:3::42 to builtin root hints.
	- fixup so it works with libev-3.51 from http://dist.schmorp.de/libev/
	- comm_timer_set performs base_set operation after event_add.

18 December 2008: Wouter
	- fixed bug reported by Duane Wessels: error in DLV lookup, would make
	  some zones that had correct DLV keys as insecure.
	- follows -rc makedist from ldns changes (no _rc).
	- ldns tarball updated with 1.4.1rc for DLV unit test.
	- verbose prints about recursion lame detection and server selection.
	- fixup BSD port for infra host storage. It hashed wrongly.
	- fixup makedist snapshot name generation.
	- do not reopen syslog to avoid dev/log dependency.

17 December 2008: Wouter
	- follows ldns makedist.sh. -rc option. autom4te dir removed.
	- unbound-control status command.
	- extended statistics has a number of ipv6 queries counter.
	  contrib/unbound_munin_ was updated to draw ipv6 in the hits graph.

16 December 2008: Wouter
	- follow makedist improvements from ldns, for maintainers prereleases.
	- snapshot version uses _ not - to help rpm distinguish the
	  version number.

11 December 2008: Wouter
	- better fix for bug #219: use LOG_NDELAY with openlog() call.
	  Thanks to Tamas Tevesz.

9 December 2008: Wouter
	- bug #221 fixed: unbound checkconf checks if key files exist if
	  remote control is enabled. Also fixed NULL printf when not chrooted.
	- iana portlist updated.

3 December 2008: Wouter
	- Fix problem reported by Jaco Engelbrecht where unbound-control stats